# whois-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  whois_server.py
src/whois_mcp_server/: __init__.py  whois_server.py
