# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korean-whois-mcp"
version = "0.1.0"
description = "Korean Whois MCP Server for domain lookup using official API"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
dependencies = [
    "fastmcp>=0.9.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
korean-whois-mcp = "korean_whois_mcp:main"

# Claude Desktop 설정 (claude_desktop_config.json)
#{
#  "mcpServers": {
#    "korean-whois": {
#      "command": "python",
#      "args": ["path/to/korean_whois_mcp.py"],
#      "env": {
#        "WHOIS_SERVICE_KEY": "your_api_service_key_here"
#      }
#    }
#  }
#}