# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whois-mcp"
version = "0.1.0"
description = "Korean Whois MCP Server for domain lookup using official API"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
dependencies = [
    "fastmcp>=0.9.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
whois-mcp = "whois_mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Claude Desktop 설정 (claude_desktop_config.json)
#{
#  "mcpServers": {
#    "whois": {
        "command": "uv",
        "args": [
          "--directory",
          "path/to/whois-mcp",
          "run",
          "whois-mcp"
        ],
        "env": {
            "WHOIS_SERVICE_KEY": "your_api_service_key_here"
        }
      }
#  }
#}
